Добавил некоторые комментарии

--- a/2_Exercise.ipynb
+++ b/2_Exercise.ipynb
@@ -332,7 +332,11 @@
    "cell_type": "markdown",
    "source": [
     "# Задание 6\n",
-    "Вентиль U может в принципе задать любую суперпозицию состояний, принимает в себя три параметра"
+    "Вентиль U может в принципе задать любую суперпозицию состояний, принимает в себя три параметра\n",
+    "\n",
+    "- theta (θ) - угол поворота вокруг оси X\n",
+    "- phi (φ) - угол поворота вокруг оси Z перед поворотом на θ\n",
+    "- lambda (λ) - угол поворота вокруг оси Z после поворота на θ"
    ],
    "id": "67c0fcd31dd48ec2"
   },
@@ -814,7 +818,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Задание 13.c",
+   "source": [
+    "# Задание 13.c \n",
+    "Вентиль Z поворачивает на сфере Блоха на $\\pi$. Далее, получаем, что |1> станет отрицательным, т.к. через формулу Эйлера выйдем на $-1$"
+   ],
    "id": "f54d138e75d888d9"
   },
   {
@@ -863,7 +870,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Задание 14.a",
+   "source": [
+    "# Задание 14.a\n",
+    "Оба кубита в суперпозиции"
+   ],
    "id": "5fb935ae78ae94ed"
   },
   {
@@ -929,7 +939,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Задание 14.b",
+   "source": [
+    "# Задание 14.b\n",
+    "Перевернули состояние кубита с 0 на 1. И перевели в суперпозицию"
+   ],
    "id": "58314bca5a944629"
   },
   {
